minor fix for overflows of p elements

--- a/styles/themes/base.less
+++ b/styles/themes/base.less
@@ -34,7 +34,7 @@
 }
 
 /* FIX: Chrome is weird with text selections if there is an element with negative margins overflowing out of a p element */
-#main-content p {
+#mw-content-text p {
 	overflow:auto;
 }
 
